# internal/model/capability.go
@@ -75,35 +75,6 @@ var DefaultCapabilities = CapabilityContract{
 			CapabilitySessionProfile:     SupportComplete,
 			CapabilityMediaDownload:      SupportComplete,
 		},
-		"cloud_api": {
-			CapabilityMessageText:        SupportComplete,
-			CapabilityMessageMedia:       SupportComplete,
-			CapabilityMessageSticker:     SupportComplete,
-			CapabilityMessageLocation:    SupportComplete,
-			CapabilityMessageButton:      SupportComplete,
-			CapabilityMessageList:        SupportComplete,
-			CapabilityMessageReaction:    SupportComplete,
-			CapabilityMessageMarkRead:    SupportComplete,
-			CapabilityMessageLink:        SupportPartial,
-			CapabilityMessagePoll:        SupportUnavailable,
-			CapabilityMessageContact:     SupportUnavailable,
-			CapabilityMessageEdit:        SupportUnavailable,
-			CapabilityMessageDelete:      SupportUnavailable,
-			CapabilityMessageForward:     SupportUnavailable,
-			CapabilityMessagePresence:    SupportUnavailable,
-			CapabilityMessageStatusText:  SupportUnavailable,
-			CapabilityMessageStatusMedia: SupportUnavailable,
-			CapabilitySessionConnect:     SupportPartial,
-			CapabilitySessionDisconnect:  SupportPartial,
-			CapabilitySessionQR:          SupportUnavailable,
-			CapabilitySessionPair:        SupportUnavailable,
-			CapabilitySessionLogout:      SupportPartial,
-			CapabilitySessionReconnect:   SupportPartial,
-			CapabilitySessionRestart:     SupportPartial,
-			CapabilitySessionStatus:      SupportPartial,
-			CapabilitySessionProfile:     SupportPartial,
-			CapabilityMediaDownload:      SupportUnavailable,
-		},
 	},
 }
 
